--- a/mobile/package.json
+++ b/mobile/package.json
@@ -4,24 +4,85 @@
   "main": "expo-router/entry",
   "scripts": {
     "start": "expo start",
+    "reset-project": "node ./scripts/reset-project.js",
     "android": "expo start --android",
     "ios": "expo start --ios",
-    "web": "expo start --web"
+    "web": "expo start --web",
+    "build:ios": "eas build --platform ios",
+    "build:android": "eas build --platform android",
+    "build:all": "eas build --platform all",
+    "submit:ios": "eas submit --platform ios",
+    "submit:android": "eas submit --platform android",
+    "lint": "expo lint",
+    "type-check": "tsc --noEmit"
   },
+  "keywords": [
+    "education",
+    "learning",
+    "study-sessions",
+    "tutoring"
+  ],
+  "author": "Your Name",
+  "license": "MIT",
+  "private": true,
   "dependencies": {
-    "expo": "~51.0.0",
-    "expo-router": "~3.5.0",
-    "expo-status-bar": "~1.12.1",
-    "react": "18.2.0",
-    "react-native": "0.74.0",
-    "react-native-safe-area-context": "4.10.1",
-    "react-native-screens": "~3.31.1",
-    "axios": "^1.6.0",
-    "@react-native-async-storage/async-storage": "1.23.1",
-    "react-native-reanimated": "~3.10.1"
+    "@expo/vector-icons": "^15.0.2",
+    "@react-native-async-storage/async-storage": "2.2.0",
+    "@react-native-community/datetimepicker": "8.4.4",
+    "@react-navigation/bottom-tabs": "^7.3.10",
+    "@react-navigation/elements": "2.3.8",
+    "@react-navigation/native": "^7.1.6",
+    "@stripe/stripe-react-native": "0.50.3",
+    "@supabase/supabase-js": "^2.49.5-next.1",
+    "@tanstack/react-query": "5.76.0",
+    "axios": "^1.7.7",
+    "expo": "~54.0.0",
+    "expo-apple-authentication": "~8.0.7",
+    "expo-blur": "~15.0.7",
+    "expo-camera": "~17.0.8",
+    "expo-checkbox": "~5.0.7",
+    "expo-constants": "~18.0.9",
+    "expo-dev-client": "~6.0.15",
+    "expo-font": "~14.0.9",
+    "expo-haptics": "~15.0.7",
+    "expo-image": "~3.0.9",
+    "expo-linear-gradient": "~15.0.7",
+    "expo-linking": "~8.0.8",
+    "expo-router": "~6.0.12",
+    "expo-secure-store": "~15.0.7",
+    "expo-splash-screen": "~31.0.10",
+    "expo-status-bar": "~3.0.8",
+    "expo-symbols": "~1.0.7",
+    "expo-system-ui": "~6.0.7",
+    "expo-web-browser": "~15.0.8",
+    "nativewind": "2.0.11",
+    "react": "19.1.0",
+    "react-dom": "19.1.0",
+    "react-native": "0.81.4",
+    "react-native-gesture-handler": "~2.28.0",
+    "react-native-mmkv": "3.2.0",
+    "react-native-reanimated": "~3.16.1",
+    "react-native-responsive-fontsize": "^0.5.1",
+    "react-native-safe-area-context": "~5.6.0",
+    "react-native-screens": "~4.16.0",
+    "react-native-size-matters": "^0.4.2",
+    "react-native-vector-icons": "^10.3.0",
+    "react-native-web": "^0.21.0",
+    "react-native-webview": "13.15.0",
+    "upgrade": "^1.1.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0"
+    "@babel/core": "7.26.0",
+    "@types/node": "^24.3.0",
+    "@types/react": "~19.1.10",
+    "@types/react-native": "0.72.8",
+    "babel-preset-expo": "~54.0.0",
+    "eslint": "^9.37.0",
+    "eslint-config-expo": "~10.0.0",
+    "patch-package": "^8.0.0",
+    "supabase": "^2.48.3",
+    "tailwindcss": "3.4.17",
+    "typescript": "~5.9.2"
   },
-  "private": true
+  "overrides": {}
 }
